--- a/src/main/webapp/resources/css/layout.css
+++ b/src/main/webapp/resources/css/layout.css
@@ -76,6 +76,17 @@
 		background: url(../images/form-bg.png) top left;
 		padding: 8px 0 0 8px; 
 		}
+		
+	.form-bg2 {
+		width: 370px;
+		height: 248px;
+		-moz-border-radius:9px;
+		-webkit-border-radius:9px;
+		border-radius:9px;
+		margin: 150px auto 0;
+		background: url(../images/bg2.png) top left;
+		padding: 8px 0 0 8px; 
+		}
 	
 	.form-bg form {
 		width: 360px;
