--- a/src/main/webapp/template/esqueleto.xhtml
+++ b/src/main/webapp/template/esqueleto.xhtml
@@ -10,10 +10,10 @@
 <f:view>
     <h:head>
 
-        <link type="text/css" rel="stylesheet"
-              href="#{request.contextPath}/resources/bootstrap.css"/>
-
-
+		<link type="text/css" rel="stylesheet"
+              href="#{request.contextPath}/resources/estiloBase.css"/>
+		<link type="text/css" rel="stylesheet"
+              href="#{request.contextPath}/resources/css/estiloMant.css"/>
         <script type="text/javascript" src="#{request.contextPath}/resources/js/calendar-es.js"></script>
 
     </h:head>
