Mantenimiento de Usuario

--- a/src/main/webapp/template/esqueleto.xhtml
+++ b/src/main/webapp/template/esqueleto.xhtml
@@ -9,7 +9,7 @@
 
 <f:view>
     <h:head>
-
+        <h:outputScript library="js" name="datatableSelection.js" target="head"/>
 		<link type="text/css" rel="stylesheet"
               href="#{request.contextPath}/resources/estiloBase.css"/>
 		<link type="text/css" rel="stylesheet"
