Menu Principal y carpetas de mant

--- a/src/main/webapp/template/esqueleto.xhtml
+++ b/src/main/webapp/template/esqueleto.xhtml
@@ -14,6 +14,8 @@
               href="#{request.contextPath}/resources/estiloBase.css"/>
 		<link type="text/css" rel="stylesheet"
               href="#{request.contextPath}/resources/css/estiloMant.css"/>
+        <link type="text/css" rel="stylesheet"
+              href="#{request.contextPath}/resources/css/estiloMenu.css"/>
         <script type="text/javascript" src="#{request.contextPath}/resources/js/calendar-es.js"></script>
 
     </h:head>
