Carpetas de xhtml - Parte 1

--- a/src/main/webapp/resources/css/estiloMant.css
+++ b/src/main/webapp/resources/css/estiloMant.css
@@ -207,3 +207,9 @@ body {
 .wizardNoBorder .ui-wizard-content .ui-panel {
 	border:none;
 }
+
+.construction{
+	font-family:verdana;
+	font-size:25px;
+	margin-left:370px;
+}
