--- a/src/main/webapp/resources/css/estiloMenu.css
+++ b/src/main/webapp/resources/css/estiloMenu.css
@@ -1,10 +1,13 @@
-.divMenu{
+.panelMenu{
 	-moz-border-radius:9px;
 	-webkit-border-radius:9px;
 	border-radius:9px;
 	margin: 150px auto 0;
 	background: url(../images/bg.jpg) top left;
 	padding: 15px 0 15px 8px; 
+	width:600px;
+	height:300px;
+	opacity:0.9;
 }
 
 .ui-dock-top{
