--- a/src/main/webapp/resources/css/estiloLogin.css
+++ b/src/main/webapp/resources/css/estiloLogin.css
@@ -29,7 +29,7 @@ body {
 	width: 100%;
 	background: #fff;
 	border-bottom: 4px solid #95A18F;
-	color: #e34848;
+	color: #88A1B5;
 	position: fixed;
 	top: 0;
 	font-size: 14px;
