--- a/src/main/webapp/resources/css/estiloMant.css
+++ b/src/main/webapp/resources/css/estiloMant.css
@@ -1,6 +1,5 @@
 @CHARSET "ISO-8859-1";
 
-
 body { 
 		background: url(../images/bgMant.png);
 		font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -21,6 +20,13 @@ body {
 	font-family:candara;
 }
 
+
+
+#body {
+   padding:10px;
+   padding-bottom:60px;   /* Height of the footer */
+}
+
 #form{
 	margin:auto;
 	padding: 5px;
@@ -32,7 +38,6 @@ body {
 	margin-left:40px;
 	margin-top:5px;
 	display:inline;
-	
 }
 
 .opciones{
@@ -46,6 +51,9 @@ body {
 .botonLogout{
 	font-family:candara;
 	font-size:14px;
+	border-color: #ccc;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
 }
 
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover {
@@ -63,11 +71,16 @@ body {
 }
 
 
-.notice {
+.ui-state-default,.ui-widget-content .ui-state-default,.ui-widget-header .ui-state-default{
+	border-color: #ccc;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+} 
+
+#header {
 		width: 100%;
 		background: #fff;
 		border-bottom: 4px solid #95A18F;
-		color: #e34848;
+		color: #88A1B5;
 		position: fixed;
 		top: 0;
 		font-size: 14px;
@@ -78,14 +91,14 @@ body {
 		box-shadow:0px 0px 3px 1px rgba(0,0,0,0.3);
 	}
 	
-.notice p.titulo {
+#header p.titulo {
 		text-align: center;
 		line-height: 45px;
 		font-size : 14px;
 		font-family:candara;
 		font-weight:normal;
 		display:inline;
-		margin-left:695px;
+		margin-left:703px;
 	}
 
 .mantenimiento{
@@ -100,16 +113,6 @@ body {
 	font-size:14px;
 	margin:10px;
 	font-family:candara;
-}
-
-.ui-widget-header .back {
-	font-size:14px;
-	margin:10px;
-	margin-left:15px;
-	font-family:candara;
-	border: 1px solid #4d494a;
-	background: #663037;
-	color: #ffffff;
 }
 
 .ui-row-editor{
