--- a/src/main/webapp/template/menu.xhtml
+++ b/src/main/webapp/template/menu.xhtml
@@ -14,8 +14,8 @@
 
 	<h:body>
 		<h:form>
-			<div id="footer">
-			 	<p:menubar styleClass="menuBar" model="#{menuBean.model}" widgetVar="menuTree" ></p:menubar> 
+			<div id="header2">
+			 	<p:menubar styleClass="menuBar" model="#{menuBean.model}" widgetVar="menuTree" autoDisplay="FALSE" ></p:menubar> 
 			</div>
 		 
 		</h:form>
