--- a/src/main/webapp/template/esqueleto.xhtml
+++ b/src/main/webapp/template/esqueleto.xhtml
@@ -10,6 +10,7 @@
 <f:view>
     <h:head>
         <h:outputScript library="js" name="datatableSelection.js" target="head"/>
+        <h:outputScript library="js" name="utils.js" target="head"/>
 		<link type="text/css" rel="stylesheet"
               href="#{request.contextPath}/resources/estiloBase.css"/>
 		<link type="text/css" rel="stylesheet"
