--- a/src/main/webapp/resources/css/estiloMant.css
+++ b/src/main/webapp/resources/css/estiloMant.css
@@ -134,8 +134,8 @@ body {
 		text-align: center;
 		line-height: 45px;
 		font-size : 14px;
-		font-family:Happy Monkey;
-		font-weight:normal;
+		font-family:verdana;
+		font-weight:lighter;
 		display:inline;
 		margin-left:703px;
 	}
