--- a/src/main/webapp/resources/estiloBase.css
+++ b/src/main/webapp/resources/estiloBase.css
@@ -1299,7 +1299,8 @@
     padding: 9px 15px;
     border-bottom: 1px solid #eee;
     background-color: #88A1B5;
-    font-family:Exo;
+    font-family:candara;
+    font-size:20px;
     font-weight:lighter;
 }
 
