Cambio de Password para cada usuario agregado

--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -19,6 +19,8 @@
 				<div class="logout">
 					<p:commandButton styleClass="botonLogout" value="Cerrar Sesión" actionListener="#{loginBean.logout}"
 					icon="ui-icon-circle-arrow-w" action="menuPrincipal" ajax="false"  />
+					<p:commandButton styleClass="botonLogout" value="Editar Usuario" actionListener="#{loginBean.redirectToPerfil}"
+					icon="ui-icon-person" ajax="false"  />
 				</div>
 				<p class="titulo">ACTIVA BUILDING CONTROL</p>
 				<div class="reloj">
