--- a/src/main/webapp/resources/estiloBase.css
+++ b/src/main/webapp/resources/estiloBase.css
@@ -14,6 +14,16 @@
     font-size: 1em;
 }
 
+.ui-autocomplete-panel .ui-autocomplete-list-item {
+	font-family:verdana;
+	font-size:11px;
+	text-align: left;
+}
+
+.ui-datatable .ui-row-editing .ui-cell-editor .ui-cell-editor-input{
+	text-align: center;
+}
+
 .ui-widget-content {
     border: 1px solid #dddddd;
     background: #ffffff;
@@ -120,7 +130,8 @@
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
     border-color: #ccc;
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    font-family: candara;
+    font-family: Verdana;
+    font-size:12px;
 }
 
 /* Interaction Cues----------------------------------*/
@@ -998,6 +1009,9 @@
     cursor: text;
     background: none #ffffff;
     border: 1px solid #cccccc;
+    font-family:Verdana;
+    font-size: 11px;
+    font-weight:lighter;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
