--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -22,7 +22,9 @@
 					<p:commandButton styleClass="botonLogout" value="Editar Usuario" actionListener="#{loginBean.redirectToPerfil}"
 					icon="ui-icon-person" ajax="false"  />
 				</div>
-				<p class="titulo">ACTIVA BUILDING CONTROL</p>
+				<div class="divTitulo">
+					<p class="titulo">ACTIVA BUILDING CONTROL</p>
+				</div>
 				<div class="reloj">
 					<p:clock pattern="HH:mm:ss - dd / MM / yyyy" />
 				</div>				
